로그 출력 설정(정보 및 레벨) 변경

--- a/lite-gateway-sample/src/main/resources/application.yml
+++ b/lite-gateway-sample/src/main/resources/application.yml
@@ -10,3 +10,8 @@ lite:
         predicates:
           - name: Path
             args: /foo/**
+
+logging:
+  level:
+    root: info
+    lite.gateway: debug
