httpClient 설정 및 http 요청 컴포넌트 구현(초안)

--- a/lite-gateway-sample/src/main/resources/application.yml
+++ b/lite-gateway-sample/src/main/resources/application.yml
@@ -5,28 +5,19 @@ spring:
 lite:
   gateway:
     routes:
-    - id: test-route
-      uri: https://httpbin.org
-      predicates:
-        - name: Method
-          args: GET
-      order: 1
-    - id: jsonplaceholder-route
-      uri: https://jsonplaceholder.typicode.com
-      predicates:
-        - name: Method
-          args: POST
-        - name: Path
-          args: /posts/**
-      order: 2
-    - id: postman-echo-route
-      uri: https://postman-echo.com
-      predicates:
-        - name: Path
-          args: /post/**
-        - name: Header
-          args: "Content-Type, multipart/form-data.*"
-      order: 3
+      - id: test-route
+        uri: https://httpbin.org
+        predicates:
+          - name: Method
+            args: GET
+        order: 1
+      - id: mock1
+        uri: http://localhost:18080
+        predicates:
+          - name: Path
+            args: /mock1/ok
+        order: 2
+
 logging:
   level:
     root: info
