feat(route): 동적 라우팅 기능 구현 및 활성화
구현된 동적 라우팅 로직을 활성화하기 위해 WebFluxGatewayConfiguration을 수정합니다. GatewayHandlerMapping이 동적으로 생성된 Route의 predicate를 처리하도록 변경하고, 실제 동작을 확인할 수 있는 application.yml 예제 설정을 추가합니다.

--- a/lite-gateway-server-webflux/src/main/resources/application.yml
+++ b/lite-gateway-server-webflux/src/main/resources/application.yml
@@ -1,6 +1,29 @@
-spring:
-  application:
-    name: lite-gateway-spring-boot-autoconfigure
-logging:
-  level:
-    root: debug
+lite:
+  gateway:
+    routes:
+      - id: user-service-route
+        uri: http://localhost:8081 # 대상 서비스 URI
+        predicates:
+          - Path=/api/users/**
+        filters:
+          - name: AddRequestHeader
+            args:
+              name: X-Gateway-Route
+              value: user-service-route
+          - name: AddResponseHeader
+            args:
+              name: X-Gateway-Timestamp
+              value: ${T(java.time.Instant).now().toEpochMilli()} # SPEL 표현식 예시 (동작하려면 추가 설정 필요)
+
+      - id: product-service-route
+        uri: https://httpbin.org # 테스트용 외부 서비스
+        predicates:
+          - Path=/api/products/**
+        filters:
+          - name: RemoveRequestHeader
+            args:
+              name: Cookie
+          - name: AddRequestHeader
+            args:
+              name: X-Test-Header
+              value: "Hello from Lite Gateway"
